# pyJIRAReminder

./: .gitignore  .release-please-manifest.json  CHANGELOG.md  LICENSE  README.md  TODO.md  build_local.ps1  build_local.sh  patch1.diff  pyJIRAReminder.py  pyJiraReminder.code-workspace  pyproject.toml  requirements.txt
.github/: release-please-config.json
.github/workflows/: linter.yml  release-please.yml  release.yml  test_release.yml
os_scripts/: archive_git.ps1  archive_git.sh  build_local.ps1  build_local.sh
scripts/: build_local.ps1  build_local.sh  test_config_load.py  test_controller_notifications.py
src/jira_reminder/: __init__.py  app.py  controller.py  jira_client.py  logging_setup.py  metrics.py  paths.py  security.py  ui.py
