[project]
name = "pyJIRAReminder"
version = "0.10.0"  # x-release-please-version
description = "A simple desktop application to remind you of your Jira tasks."
authors = [
    { name = "Yegor Sheremetiev", email = "iegor.sheremetiev@visteon.com" }
]
readme = "README.md"

[project.scripts]
jira-reminder = "jira_reminder.app:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
